--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "gsap": "^3.10.4",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
@@ -19,6 +18,7 @@
     "autoprefixer": "^10.4.7",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
+    "framer-motion": "^6.3.11",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.2"
   }
