--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "eslint-config-next": "12.1.6",
     "framer-motion": "^6.3.11",
     "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.11",
     "tailwindcss": "^3.1.2"
   }
 }
