--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
     "@mailchimp/mailchimp_marketing": "^3.0.75",
+    "@tailwindcss/forms": "^0.5.2",
+    "axios": "^0.27.2",
+    "cookie": "^0.5.0",
+    "jsonwebtoken": "^8.5.1",
     "mailchimp": "^1.2.1",
     "mongoose": "^6.4.4",
     "next": "12.1.6",
