--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "sass": "^1.52.3"
+    "sass": "^1.52.3",
+    "zustand": "^4.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
