--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mailchimp/mailchimp_marketing": "^3.0.75",
+    "axios": "^0.27.2",
     "mailchimp": "^1.2.1",
     "mongoose": "^6.4.4",
     "next": "12.1.6",
