--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ MAILCHIMP_API_SERVER="us17"
 MAILCHIMP_NEWSLETTR_LIST_ID="b819e20747"
 
 JWT_SECRET=123456
+
+NEXT_PUBLIC_API_URL="https://bitzquad-com-2-0-amber.vercel.app"
