--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGODBURL=mongodb+srv://admin:admin@cluster0.istvc.mongodb.net/DB?retryWrites=true&w=majority
+MONGODBURL=mongodb+srv://admin:admin@cluster0.istvc.mongodb.net/DBBitz?retryWrites=true&w=majority
 
 MAILCHIMP_API_KEY="849404baf27b6f2ba8665c716444df27-us17"
 # MAILCHIMP_AUDIENCE_ID="b819e20747"
@@ -9,3 +9,4 @@ MAILCHIMP_NEWSLETTR_LIST_ID="b819e20747"
 JWT_SECRET=123456
 
 NEXT_PUBLIC_API_URL="https://bitzquad-com-2-0-amber.vercel.app"
+#NEXT_PUBLIC_API_URL="http://localhost:3000"
