fix meta image urls

--- a/.env
+++ b/.env
@@ -6,5 +6,5 @@ MAILCHIMP_NEWSLETTR_LIST_ID="b819e20747"
 
 JWT_SECRET=123456
 
-NEXT_PUBLIC_API_URL="https://bitzquad-com-2-0-amber.vercel.app"
+NEXT_PUBLIC_API_URL="https://www.bitzquad.com"
 #NEXT_PUBLIC_API_URL="http://localhost:3000"
