--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,8 +2,9 @@
   "extends": "next/core-web-vitals",
   "rules": {
     "@next/next/no-img-element": "off",
-    "react-hooks/exhaustive-deps":"off",
-    "@next/next/no-html-link-for-pages":"off",
-    "jsx-a11y/alt-text":"off"
+    "react-hooks/exhaustive-deps": "off",
+    "@next/next/no-html-link-for-pages": "off",
+    "jsx-a11y/alt-text": "off",
+    "@next/next/no-sync-scripts": "off"
   }
 }
